--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.8.6",
-    "react-alert": "^5.5.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
@@ -33,6 +32,7 @@
   },
   "devDependencies": {
     "@material-ui/core": "^4.1.1",
-    "@material-ui/icons": "^4.2.0"
+    "@material-ui/icons": "^4.2.0",
+    "reactjs-input-validator": "^0.16.4"
   }
 }
