--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.0.1",
     "axios": "^0.19.0",
     "react": "^16.8.6",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
     "react-material-ui-form-validator": "^2.0.9",
     "react-moment": "^0.9.2",
