--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
+    "moment-range": "^4.0.2",
     "react": "^16.8.6",
+    "react-calendar": "^2.19.0",
+    "react-color": "^2.17.3",
+    "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
