--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
     "axios": "^0.19.0",
+    "datepicker": "0.0.0",
     "react": "^16.8.6",
+    "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.0",
