--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^2.7.0",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
+    "react-json-view": "^1.19.1",
     "react-material-ui-form-validator": "^2.0.9",
     "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.0",
