--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
@@ -10,6 +11,7 @@
     "axios": "^0.19.0",
     "date-fns": "^1.30.1",
     "datepicker": "0.0.0",
+    "font-awesome": "^4.7.0",
     "mini-create-react-context": "^0.3.2",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
