--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/types": "^7.5.5",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
@@ -29,6 +30,7 @@
     "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-toastify": "^5.3.2",
     "tail.datetime": "^0.4.12"
   },
   "scripts": {
