--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.8.6",
     "react-calendar": "^2.19.0",
     "react-color": "^2.17.3",
+    "react-date-picker": "^7.7.0",
     "react-datepicker": "^2.8.0",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
