--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^1.30.1",
     "datepicker": "0.0.0",
     "font-awesome": "^4.7.0",
+    "font-picker-react": "^3.2.0",
     "mini-create-react-context": "^0.3.2",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
